src/test/c/reject/06-invalidNote.msh
Note myNote = Note(h,7,piano);